[package]
name = "task-master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = { version = "1.0.144", features = ["derive"] }
serde_derive = "1.0.144"
dirs = "4.0.0"
chrono = "0.4.22"
clap = { version = "3.2.17", features = ["derive"] }
